tests/paczka1/fuzzy1/18876307.err
Error in line 5: S2i S855 2,5
Error in line 10: oqwvJgk A847 67,7
Error in line 19: S2i A812 90,9
Error in line 3: 0nWOkt0 A812 38,5
